---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2025-10-25
  Balancing:
    - better use of high range turrets by increasing base detection range of dart-radars and higher
      rises with quality level improvements
    - introduced new researchs for increasing detection range of dart-radars
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025-10-25
  Bugfixes:
    - Fixed a compatibility issue in interaction with mod "planet picker"
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-10-24
  Bugfixes:
    - Fixed nil access when placing a new FCC
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-10-24
  Features:
    - added the ability to monitor the ammunition stock in the hub
    - support of changes made to the game in the map editor
  Ease of use:
    - added an automatic configuration of the turrets connected to a FCC
  Info:
    - Upgraded log4factorio to V 1.2.1
---------------------------------------------------------------------------------------------------
Version: 1.0.16
Date: 2025-09-01
  Locale:
    - new locales
      ελληνικά (el)
      magyar (hu)
      türkçe (tr)
---------------------------------------------------------------------------------------------------
Version: 1.0.15
Date: 2025-08-01
  Features:
    - introduced specially adaptation for foreign mods which add new ammo-turrets without offering the connectity to the
      circuit network. These mods are currently supported:
        Cannon Turret
        Rampant Arsenal (only a subset of turrets is affected - those making sense for asteroid defense 😉)
---------------------------------------------------------------------------------------------------
Version: 1.0.14
Date: 2025-07-26
  Ease of use: