@@ -36,19 +36,11 @@ local function dataOfRow(data)
 end
 -- ###############################################################
 
-local function getMaxBasedOnQuality(rop, base)
-    local entity = rop.radar
-    local quality_level = (entity.valid and entity.quality.level) or 0
-    Log.logBlock(quality_level, function(m)log(m)end, Log.FINER)
-
-    -- yields differences of 4, 3, 2, 1 for the next higher level
-    return base + (9 - quality_level) * (quality_level)
-end
 -- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 --- @param rop RadarOnPlatform
 local function getMaxDefenseRange(rop)
-    return getMaxBasedOnQuality(rop, constants.max_defenseRange)
+    return entities_radar.addIncreaseBasedOnQuality(rop, constants.max_defenseRange)
 end
 -- +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
@@ -58,7 +50,7 @@ local function getMaxDetectionRange(rop)
     Log.logBlock(storage.forces, function(m)log(m)end, Log.FINE)
 
     local lvl = global_data.getForce_data(rop.radar.force_index).techLevel
-    return getMaxBasedOnQuality(rop, constants.max_detectionRange) * entities_radar.calculateRangeBonus(lvl)
+    return entities_radar.addIncreaseBasedOnQuality(rop, constants.max_detectionRange) * entities_radar.calculateRangeBonus(lvl)
 end
 -- ###############################################################
 
