@@ -5,6 +5,8 @@ Date: 2025-10-25
     - better use of high range turrets by increasing base detection range of dart-radars and higher
       rises with quality level improvements
     - introduced new researchs for increasing detection range of dart-radars
+  Info:
+    - Migration upgrades detectionRange to new max for all existing dart-radars
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 2025-10-25
